problems
====================[ Build | MyProject | Debug ]===============================
D:\Clion\CLion-2023.2.2.win\bin\cmake\win\x64\bin\cmake.exe --build D:\Cproject\C-\cmake-build-debug --target MyProject -- -j 14
[  6%] Building C object CMakeFiles/MyProject.dir/name_a_pass.c.obj
[ 12%] Building C object CMakeFiles/MyProject.dir/main.c.obj
D:\Cproject\C-\name_a_pass.c:65:6: error: conflicting types for 'm_readIntoList_p'; have 'void(struct Password_m **, struct Password_m **)'
   65 | void m_readIntoList_p(struct Password_m** head, struct Password_m** tail)
      |      ^~~~~~~~~~~~~~~~
In file included from D:\Cproject\C-\name_a_pass.c:2:
D:\Cproject\C-\class.h:249:6: note: previous declaration of 'm_readIntoList_p' with type 'void(struct Password_m **)'
  249 | void m_readIntoList_p(struct Password_m** head);
      |      ^~~~~~~~~~~~~~~~
D:\Cproject\C-\name_a_pass.c:114:6: error: conflicting types for 'u_readIntoList_p'; have 'void(struct Password_u **, struct Password_u **)'
  114 | void u_readIntoList_p(struct Password_u** head, struct Password_u** tail)
      |      ^~~~~~~~~~~~~~~~
D:\Cproject\C-\class.h:250:6: note: previous declaration of 'u_readIntoList_p' with type 'void(struct Password_u **)'
  250 | void u_readIntoList_p(struct Password_u** head);
      |      ^~~~~~~~~~~~~~~~
D:\Cproject\C-\name_a_pass.c:163:6: error: conflicting types for 'd_readIntoList_p'; have 'void(struct Password_d **, struct Password_d **)'
  163 | void d_readIntoList_p(struct Password_d** head, struct Password_d** tail)
      |      ^~~~~~~~~~~~~~~~
D:\Cproject\C-\class.h:251:6: note: previous declaration of 'd_readIntoList_p' with type 'void(struct Password_d **)'
  251 | void d_readIntoList_p(struct Password_d** head);
      |      ^~~~~~~~~~~~~~~~
mingw32-make[3]: *** [CMakeFiles\MyProject.dir\build.make:159: CMakeFiles/MyProject.dir/name_a_pass.c.obj] Error 1
mingw32-make[3]: *** Waiting for unfinished jobs....
D:\Cproject\C-\main.c: In function 'main':
D:\Cproject\C-\main.c:1844:99: warning: passing argument 1 of 'print_order_list' from incompatible pointer type [-Wincompatible-pointer-types]
 1844 |                                                                         print_order_list(m_current->r_tail);
      |                                                                                          ~~~~~~~~~^~~~~~~~
      |                                                                                                   |
      |                                                                                                   struct r_classify *
In file included from D:\Cproject\C-\main.c:3:
D:\Cproject\C-\class.h:207:37: note: expected 'struct order *' but argument is of type 'struct r_classify *'
  207 | void print_order_list(struct order* tail);
      |                       ~~~~~~~~~~~~~~^~~~
D:\Cproject\C-\main.c:1861:115: warning: passing argument 1 of 'print_order_list' from incompatible pointer type [-Wincompatible-pointer-types]
 1861 |                                                                                         print_order_list(m_current->r_tail);
      |                                                                                                          ~~~~~~~~~^~~~~~~~
      |                                                                                                                   |
      |                                                                                                                   struct r_classify *
D:\Cproject\C-\class.h:207:37: note: expected 'struct order *' but argument is of type 'struct r_classify *'
  207 | void print_order_list(struct order* tail);
      |                       ~~~~~~~~~~~~~~^~~~
mingw32-make[2]: *** [CMakeFiles\Makefile2:82: CMakeFiles/MyProject.dir/all] Error 2
mingw32-make[1]: *** [CMakeFiles\Makefile2:89: CMakeFiles/MyProject.dir/rule] Error 2
mingw32-make: *** [Makefile:123: MyProject] Error 2
